--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="intro" id="introText">
-      i hope you read this.
+      This is 4 u <3. Use desktop site.
     </div>
     <button class="btn" onclick="showLetter()">Read it</button>
 
@@ -20,4 +20,5 @@
     <script src="script.js"></script>
   </body>
 </html>
+
 
